force-app/main/default/objects/Vehicle_Fuel_Transaction__c/Vehicle_Fuel_Transaction__c.object-meta.xml
<CustomObject>
    <description>Fuel transaction (IFTA) from GPS Insight. Synced from /vehicle/ifta by WEXFuelSyncService.</description>
    <label>Vehicle Fuel Transaction</label>
    <nameField>
        <displayFormat>FUEL-{000000}</displayFormat>
        <label>Vehicle Fuel Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Fuel Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>