force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/Fuel_Date__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Date__c</fullName>
    <label>Fuel Date</label>
    <type>Date</type>
</CustomField>