force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <description>Fuel type from GPS Insight IFTA data: Diesel, Gasoline, etc.</description>
    <label>Fuel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>