force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/Gallons__c.field-meta.xml
<CustomField>
    <fullName>Gallons__c</fullName>
    <label>Gallons</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>