force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Two-letter US state code where fuel was purchased (IFTA reporting).</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>