force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Fuel Transactions</relationshipLabel>
    <relationshipName>Fuel_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>