force-app/main/default/objects/Vehicle_Fuel_Transaction__c/fields/WEX_Fuel_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Fuel_Id__c</fullName>
    <description>Unique fuel transaction identifier from GPS Insight. Used as external ID for upsert.</description>
    <externalId>true</externalId>
    <label>WEX Fuel Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>